* Fixed a few files where suExec fixes were not applied (Chris T)
* Fixed erroneous buttons marked "Save and Post" showing up (Chris T)
* Corrected test cases so they do not fail w/o optional LaTeX mods (Chris T)
* Made errors saving chart of accounts entry more friendly (Chris T)
* Fixed permissions issue involving yearend (Chris T)
* Fixed filename issue in install.sh (Chris T)

Changelog for LedgerSMB 1.3.1
* Language selection for invoice templates fixed (Chris T)
* Fixed DB errors on project search (Chris T)
* Fixed DB errors on timecard entry (Chris T)
* Fixed DB errors on timecard searches (Chris T)
* String standardization in employee/user management (Herman V)
* Fixed Employee record duplicted on save (Herman V)
* Fixed upgrade script not bringing in entity.name for employees (Chris T)
* Fixed upgrade script error importing duplicate customer/vendor numbers
(Chris T)

Changelog for LedgerSMB 1.3.0

Security:
* Security is now robustly enforced on the db level (Chris T and Josh D)
* New user interface to manage users (Chris T and Aurynn)
* Framework in place, used to prevent XSRF attacks (Chris T)

Separation of Duties:
* Separate permissions for entry and posting to the books.
* Voucher/Batch system (Chris T)
* Draft system for unapproved transactions (Chris T)
* Reconciliation is now subject to separation of duties (Chris T and Aurynn)

End of Year:
* Close books and end of year transactions at once (Chris T and Aurynn)
* Cannot close books where unapproved transactions are before yearend(Chris T)
* Yearend/closed books now creates balance checkpoints for better performance
(Chris T and Aurynn)
* The prohibition against entering transactions into closed period enforced
on a database level.

General Ledger/Journal:
* GL reports filter by account (Chris T)
* GL reports account is ajax-style autocomplete (John W)
* Journal Entry screen now uses AJAX-style autocomplete for accounts (Chris T)