@@ -105,8 +105,8 @@
             <tr>
                 <td><?lsmb text('Country') ?></td>
                 <td>
-                    <?lsmb IF edit_location.country; 
-                        country_id = edit_location.country_id;
+                    <?lsmb IF user.entity.country_id; 
+                        country_id = user.entity.country_id;
                         ELSE; 
                         country_id = default_country;
                         END; -?>
